--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -21,13 +21,20 @@ textarea{
   border-bottom: 10px solid black;
 }
 
+.container {
+  margin-top: auto;
+}
 .description{
   white-space: pre-wrap;
 }
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
+  font-size: 20px;
+}
+
+.timeSec {
+  display: inline; /* the default for span */
 }
 
 .row {
@@ -45,20 +52,23 @@ textarea{
 .past {
   background-color: #d3d3d3;
   color: white;
+  width: 700px;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  width: 700px;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  width: 700px;
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+ 
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
